# HealthIQ-AI-v5

./: .coverage  .env  .env.example  .env.local.example  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ALIAS_NORMALIZATION_INSTRUMENTATION.md  DIAGNOSTIC_INSTRUMENTATION_COMPLETE.md  DTO_ALIGNMENT_REPORT.md  EVENTSOURCE_DUPLICATION_FIX.md  FRONTEND_DATA_FLOW_FIX.md  HANDLER_CLEANUP_SUMMARY.md  HEIGHT_VALIDATION_FIX.md  Healthiq-code.txt  LICENSE.txt  MIGRATION_READINESS.md  PYDANTIC_VALIDATION_FIX.md  Parse_Decimal_Unification_Report.md  QUESTIONNAIRE_FLOW_RESTORED.md  README.md  REFERENCE_RANGE_PIPELINE_AUDIT.md  SLIDER_FIX_COMPLETE.md  SPRINT_READINESS_REPORT_2025-10-11.md  STEP_1E_VERIFICATION_REPORT.md  TEST_LEDGER.md  UPLOAD_FLOW_FIX_SUMMARY.md  WAIT_FOR_COMPLETION_FIX.md  full_test_log.txt  index.html  ionrefname  next.config.js  old.env(copy)  package-lock.json  package.json  playwright.config.ts  pytest.ini  requirements.txt  (+8 more)
backend/: .env.example  .env.test  .gitignore  README.md  alembic.ini  env.example  mypy.ci.ini  pyproject.toml  pytest.ini  requirements.txt  sprint10_test_report_20251017_094620.txt  test_gemini_integration.py
backend/app/: __init__.py  analysis_payload.py  analysis_pdf_export.py  analysis_regeneration.py  billing_entitlement.py  config.py  main.py
backend/app/routes/: __init__.py  alias_api.py  analysis.py  auth.py  billing.py  health.py  questionnaire.py  upload.py  wedge_events.py
backend/config/: ai.py  database.py  env.py  flags.py  settings.py
backend/core/: __init__.py  profile_bridge.py  supabase_anon.py
backend/core/analytics/: __init__.py  arbitration_engine.py  arbitration_registry.py  balanced_systems_presentation_v1.py  bio_stats_engine.py  biomarker_context_builder.py  calibration_engine.py  calibration_registry.py  capacity_scaler.py  causal_edge_engine.py  causal_layer_engine.py  causal_layer_registry.py  cluster_schema.py  confidence_builder.py  conflict_detector.py  conflict_registry.py  consumer_prose_safety_v1.py  criticality.py  domain_narrative_wave1.py  domain_score_assembler.py  evidence_registry.py  explainability_builder.py  influence_propagator.py  insight_graph_builder.py  interpretation_display_layer_governance_v1.py  (+36 more)
backend/docs/: BASELINE_PIPELINE_MAP.md  Sprint1_ALIAS_REGISTRY_NOTES.md
backend/frontend/: package-lock.json  package.json
backend/migrations/: env.py
backend/repositories/: __init__.py  analysis_repository.py  base.py  export_repository.py  profile_repository.py
backend/scripts/: build_pass3_frame_coverage_audit.py  compile_pass3_pilot_artifacts.py  dev_seed.py  fingerprint_root_cause_targets_v1.py  generate_kb_s45d_batch1_packages.py  generate_lc_s20_persisted_fixture_v1.py  golden_gate_local.py  pre_pr_check.ps1  report_ab_panel_delta.py  run_ab_vr_acceptance_harness.py  run_all_tests.py  run_architecture_validation_gate.py  run_baseline_tests.py  run_knowledge_package.py  run_sprint10_tests.py  run_work_package.py  smoke_cluster_engine_v2.py  smoke_prompt_v2.py  smoke_runner.py  smoke_upload_endpoint.py  update_cursor_status.py  validate_ab_panel_ssot.py  validate_active_signal_context_gate_reachability.py  validate_compile_manifest.py  validate_context_modifier_catalogue.py  validate_day_one_architecture.py  validate_day_one_launch_estate_gate.py  validate_insights.py  validate_intelligence_model.py  validate_interaction_map_v1.py  validate_intervention_effects_registry.py  validate_investigation_spec.py  validate_kb_package_estate_orphans_v1.py  validate_knowledge_package.py  validate_manifest.py  validate_medical_frame_identity_index.py  validate_medical_intelligence_architecture.py  validate_metric_namespace.py  validate_package_manifest.py  validate_phenotype_map.py  (+10 more)
backend/services/: analysis_service.py  biomarker_service.py  user_service.py
backend/ssot/: arbitration_registry.yaml  biomarker_alias_registry.yaml  biomarkers.yaml  calibration_registry.yaml  causal_layer_registry.yaml  cluster_rules.yaml  cluster_scoring_policy.yaml  clusters.yaml  conflict_registry.yaml  criticality.yaml  display_unit_policy.yaml  evidence_registry.yaml  labs.yaml  lifestyle_interpretation_bridges_v1.yaml  lifestyle_registry.yaml  precedence_registry.yaml  questionnaire.json  ranges.yaml  relationships.yaml  scoring_policy.yaml  system_burden_registry.yaml  units.yaml
backend/tests/: __init__.py  auth_headers.py  conftest.py  test_alias_registry_service.py  test_alias_registry_singleton.py  test_analysis_pdf_export.py  test_context_factory.py  test_context_factory_phase1.py  test_no_v4_reference_imports.py  test_scoring_lab_range_only.py  test_scoring_no_ssot_hooks.py  test_ssot_integrity.py  test_strict_validation.py
backend/tools/: __init__.py  export_openapi.py  launch_core_proving_harness.py  run_arbitration_scenarios.py  run_golden_panel.py  validate_ssot.py  verification_clinician_report.py  verification_ledger_extract.py  verification_ledger_run.py
backend/v4_reference/: README.md  biomarkerAliases.ts  biomarker_alias_registry.py  biomarker_alias_registry.yaml  biomarker_aliases.py  biomarkers_config.yaml  context_factory.py
(+2753 files in other folders)
